# sc-examples-rs

./: .gitignore  Cargo.toml  README.md  clean-wasm.sh  compile-all.sh  compile-debug.sh  compile-wasm.sh
adder/: Cargo.toml
adder/debug/: Cargo.toml
adder/debug/src/: main.rs
adder/src/: lib.rs
adder/test/: adder.json  adder.scen.json
crypto-bubbles/debug/: Cargo.toml
crypto-bubbles/debug/src/: main.rs
features/: Cargo.toml
features/async/alice/: Cargo.toml
features/async/bob/: Cargo.toml
features/debug/: Cargo.toml
features/debug/src/: main.rs
features/src/: lib.rs  ser_ex1.rs  ser_ex2.rs
features/test/: crypto.json  panic.json  storage.json  vec.json
simple-coin/: Cargo.toml
simple-coin/debug/: Cargo.toml
simple-coin/debug/src/: main.rs
simple-coin/signed/: Cargo.toml  README.md
simple-coin/src/: lib.rs
simple-coin/test/: allowance_CallerCaller.json  allowance_CallerOther.json  allowance_OtherCaller.json  allowance_OtherEqOther.json  allowance_OtherNEqOther.json  approve_Caller-Negative.json  approve_Caller-Positive.json  approve_Caller-Zero.json  approve_Other-Negative.json  approve_Other-Positive.json  approve_Other-Zero.json  approve_SwitchCaller.json  balanceOf_Caller.json  balanceOf_NonCaller.json  create.json  not_payable.json  totalSupply_Positive.json  totalSupply_Zero.json  transferFrom_AllDistinct-BalanceEqAllowance.json  transferFrom_AllDistinct-BalanceNEqAllowance.json  transferFrom_AllDistinct-EntireAllowanceMoreThanBalance.json  transferFrom_AllDistinct-EntireBalanceEqAllowance.json  transferFrom_AllDistinct-EntireBalanceMoreThanAllowance.json  transferFrom_AllDistinct-MoreThanAllowanceLessThanBalance.json  transferFrom_AllDistinct-MoreThanBalanceLessThanAllowance.json  transferFrom_AllDistinct-Negative.json  transferFrom_AllDistinct-NoOverflow.json  transferFrom_AllDistinct-StillNoOverflow.json  transferFrom_AllEqual-AllowanceRelevant.json  transferFrom_AllEqual-EntireBalance.json  transferFrom_CallerEqFrom-AllowanceRelevant.json  transferFrom_CallerEqFrom-EntireBalance.json  transferFrom_CallerEqFrom-MoreThanBalance.json  transferFrom_CallerEqTo-BalanceNEqAllowance.json  transferFrom_CallerEqTo-MoreThanAllowanceLessThanBalance.json  transferFrom_CallerEqTo-MoreThanBalanceLessThanAllowance.json  transferFrom_Exploratory-MultipleTransfersSucceed.json  transferFrom_Exploratory-MultipleTransfersThrow.json  transferFrom_FromEqTo-BalanceEqAllowance.json  transferFrom_FromEqTo-BalanceNEqAllowance.json  (+22 more)
(+29 files in other folders)
