[package]
name = "adder"
version = "0.1.4"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "adder"
path = "src/lib.rs"


[dependencies]
elrond-wasm = "0.4.5"
elrond-wasm-node = "0.4.5"
elrond-wasm-derive = "0.4.5"

# elrond-wasm = { path = "../../elrond-wasm-rs/elrond-wasm" }
# elrond-wasm-node = { path = "../../elrond-wasm-rs/elrond-wasm-node" }
# elrond-wasm-derive = { path = "../../elrond-wasm-rs/elrond-wasm-derive" }
