[package]
name = "features"
version = "0.2.0"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "features"
path = "src/lib.rs"


[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

elrond-wasm = "0.4.2"
elrond-wasm-node = "0.4.2"
elrond-wasm-derive = "0.4.2"

# elrond-wasm = { path = "../../elrond-wasm-rs/elrond-wasm" }
# elrond-wasm-node = { path = "../../elrond-wasm-rs/elrond-wasm-node" }
# elrond-wasm-derive = { path = "../../elrond-wasm-rs/elrond-wasm-derive" }

