[package]
name = "simple-coin-debug"
version = "0.2.0"
authors = ["andrei-marinica <andrei_m_marinica@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elrond-wasm = "0.4.2"
elrond-wasm-debug = "0.4.2"

simple-coin = { path = ".." }
